b2b-postgres-security-jwt: complete services [6.5] + mongodb queries deletion + update RELEASE_NOTES